ensure tags aren't too big in blog post pages

--- a/themes/mdb/assets/sass/components/_tags.scss
+++ b/themes/mdb/assets/sass/components/_tags.scss
@@ -1,11 +1,13 @@
 ul.tags {
   li {
     display: inline;
+    margin: 0;
 
     a {
       font-family: $secondary_font_family;
       color: $secondary_text_color;
       font-style: italic;
+      font-size: $font_size;
 
       &:after {
         content: ',';
